Move install_attributes.proto into components/policy/proto

Also makes fake_cryptohome_client loads install_attributes from the stub
file.
It's needed to use install_attributes in fake_authpolicy_client (which
uses fake_cryptohome_client).

After that would be landed we should point to different repo on the
Chrome OS side for that file.

TBR=mnissler@chromium.org

Bug: 784858
Test: manual
Change-Id: I1febe7c278a65ea6c8714875816c1f03e1d6b335
Reviewed-on: https://chromium-review.googlesource.com/768718
Commit-Queue: Roman Sorokin <rsorokin@chromium.org>
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>
Reviewed-by: Maksim Ivanov <emaxx@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518604}